Optimize starter s auto-configuration .