@@ -19,7 +19,6 @@ package com.tencent.cloud.polaris.gateway.example.callee;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
-import java.nio.charset.StandardCharsets;
 
 import com.tencent.cloud.common.constant.MetadataConstant;
 import org.slf4j.Logger;
@@ -29,6 +28,8 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.web.bind.annotation.RequestHeader;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
+
+import static com.tencent.cloud.common.constant.ContextConstant.UTF_8;
 
 /**
  * Gateway callee controller.
@@ -64,8 +65,8 @@ public class GatewayCalleeController {
 	@RequestMapping("/echo")
 	public String echoHeader(@RequestHeader(MetadataConstant.HeaderName.CUSTOM_METADATA) String metadataStr)
 			throws UnsupportedEncodingException {
-		LOG.info(URLDecoder.decode(metadataStr, StandardCharsets.UTF_8.name()));
-		return URLDecoder.decode(metadataStr, StandardCharsets.UTF_8.name());
+		LOG.info(URLDecoder.decode(metadataStr, UTF_8));
+		return URLDecoder.decode(metadataStr, UTF_8);
 	}
 
 }
